# presence

./: .gitignore  .mailmap  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  THIRD-PARTY.md  install.sh  llms.txt  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  security.yml
.github/workflows/: ci.yml  release.yml
agents/: model-curator.md
bench/: HISTORY.md  README.md  _lib.py  aggregate_session.py  cold_startup.py  install_to_working.py  install_to_working.sh  session_start_populated.py
commands/: presence-bugreport.md  presence-curate.md  presence-doctor.md  presence-preset.md  presence-reset.md  presence-status.md  presence-unlock.md
diagrams/: presence-repo.drawio
docs/: architecture.md  compliance.md  glossary.md  index.md  mcp.md  multi-host.md  positioning.md  recipes.md  roadmap.md  security.md  zerotrust.md
ext/: Cargo.toml
ext/src/: client.rs  crypto.rs  git.rs  lib.rs
hooks/: hooks.json
hooks/scripts/: _common.sh  post-tool-bash.sh  post-tool-edit.sh  pre-tool-bash.sh  session-start.sh  stop.sh  user-prompt-submit.sh
lib/: __init__.py  _common.py  audit.py  bugreport.py  cli.py  cmdparse.py  crypto.py  daemon.py  doctor.py  events.py  hook_post_tool_bash.py  hook_post_tool_edit.py  hook_pre_tool_bash.py  hook_session_start.py  hook_stop.py  hook_user_prompt_submit.py  integrity.py  mcp_server.py  model.py  presets.py  redact.py  snapshot.py  telemetry.py  unlock.py  update_check.py  verify.py  warnings_log.py
lib/adapters/: __init__.py  agents_md.py  base.py  claude.py  generic.py
presets/: _schema.json  enterprise-strict.json  solo-dev.json  team-oss.json  zerotrust.json
presets/redaction/: README.md  pci-dss.json  pii-eu.json  pii-us.json
skills/confidence-gate/: SKILL.md
skills/outcome-check/: SKILL.md
skills/project-model/: SKILL.md
tests/: conftest.py  test_adapter_agents_md.py  test_adapters.py  test_audit.py  test_bench_smoke.py  test_bugreport.py  test_cli.py  test_cmdparse.py  test_common.py  test_coverage_climb.py  test_crypto.py  test_daemon.py  test_doctor_fix.py  test_emergency_truncate.py  test_events.py  test_hardening.py  test_hook_post_tool_edit.py  test_hook_pre_tool_bash.py  test_hook_stop.py  test_hooks_smoke.py  test_install_update.py  test_integrity.py  test_marketplace.py  test_mcp_server.py  test_model.py  test_post_tool_bash.py  test_preset_schema.py  test_presets.py  test_redact.py  test_redact_profiles.py  test_session_start_async.py  test_snapshot.py  test_telemetry.py  test_unlock.py  test_update_check.py  test_verify.py  test_version_observability.py  test_warnings_fix_field.py  test_zerotrust_integration.py
