[package]
name = "presence_ext"
version = "0.1.0"
edition = "2021"

[lib]
name = "presence_ext"
crate-type = ["cdylib"]

[[bin]]
name = "presence-client"
path = "src/client.rs"

[dependencies]
hex = "0.4.3"
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }
serde_json = "1.0.149"

[features]
default = ["pyext"]
pyext = ["pyo3"]

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = "3.0"

[dependencies.git2]
version = "0.18"
